# pixel

./: .gitignore  CMakeLists.txt
src/: game.cpp  main.cpp  player.cpp
src/include/: game.h  player.h
